k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: x3-chain
  labels:
    name: x3-chain
    managed-by: helm
